feat: 메인 페이지 레이아웃 개편 및 UI/UX 개선
- 500 에러 해결: Wallet/Portfolio null 방어 로직 추가
- UI 변경: 포트폴리오 섹션 테이블 제거 및 카드형 리스트 도입
- 헤더 개선: 게임 로고(좌)와 유저 정보(우) 분리 및 아바타 크기 최적화
- 디자인: Glassmorphism(Sticky 헤더) 및 카드 호버 애니메이션 적용
- 설정: 아바타 이미지 경로 수정 (static/image/avatars)