@@ -18,22 +18,29 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
+/**
+ * 주식 게임의 핵심 로직을 담당하는 서비스 클래스
+ */
 @Service
 @RequiredArgsConstructor
 public class StockService {
 
     private final StreamerRepository streamerRepository;
-    // 이 부분들이 필드로 선언되어야 위에서 @RequiredArgsConstructor가 자동으로 연결해줍니다.
-    private final WalletRepository walletRepository; // 추가
-    private final PortfolioRepository portfolioRepository; // 추가
+    private final WalletRepository walletRepository;
+    private final PortfolioRepository portfolioRepository;
     private final HistoryRepository historyRepository;
     private final Random random = new Random();
 
-
-    public List<StreamerStockDto> getTop100Streamers() {
+    /**
+     * 메인 페이지용 상위 10명 스트리머 목록 조회
+     * 시청자 수 기준 내림차순 정렬 후 10명만 추출
+     */
+    public List<StreamerStockDto> getTopStreamers() {
         return streamerRepository.findAll().stream()
+                .sorted((s1, s2) -> Integer.compare(s2.getCurrentViewers(), s1.getCurrentViewers()))
+                .limit(10)
                 .map(s -> new StreamerStockDto(
-                        s.getId(), // [수정] ID 추가
+                        s.getId(),
                         s.getStreamerName(),
                         s.getCurrentViewers(),
                         (long) s.getCurrentPrice(),
@@ -44,76 +51,55 @@ public class StockService {
                 .toList();
     }
 
-    @Transactional
-    public boolean buyStock(Long streamerId) {
-        // 1. 매수할 스트리머 정보 가져오기
-        Streamer streamer = streamerRepository.findById(streamerId)
-                .orElseThrow(() -> new RuntimeException("스트리머를 찾을 수 없습니다."));
-
-        // 2. 내 지갑 정보 가져오기
-        List<Wallet> wallets = walletRepository.findAll();
-        if (wallets.isEmpty()) return false;
-
-        Wallet wallet = wallets.get(0);
-
-        // 3. 잔액 확인
-        int price = streamer.getCurrentPrice();
-        if (wallet.getBalance() < price) {
-            return false;
-        }
-
-        // 4. 돈 깎기
-        wallet.setBalance(wallet.getBalance() - price);
-        // save를 굳이 안해도 @Transactional 덕분에 데이터가 변경되면 자동 저장(Dirty Checking)되지만 명시적으로 적어둡니다.
-        walletRepository.save(wallet);
-
-        // 5. 내 포트폴리오에 추가
-        Portfolio portfolio = new Portfolio();
-        portfolio.setStreamerName(streamer.getStreamerName());
-        portfolio.setQuantity(1);
-        portfolio.setAveragePrice((long) price);
-        portfolioRepository.save(portfolio);
-
-        return true;
-    }
-
-
-    // 지갑 정보 조회
+    /**
+     * 사용자 지갑 정보 조회 (첫 번째 지갑 정보를 가져옴)
+     */
     public Wallet getWallet() {
         List<Wallet> wallets = walletRepository.findAll();
-        return wallets.isEmpty() ? null : wallets.get(0);
+        // Java 21: get(0) 대신 getFirst() 사용
+        return wallets.isEmpty() ? null : wallets.getFirst();
     }
 
-    // 내 주식 목록 조회
-    public List<Portfolio> getMyPortfolio() {
-        return portfolioRepository.findAll();
-    }
-
+    /**
+     * 실시간 주가 갱신 로직
+     * 랜덤하게 10명을 뽑아 시청자 수와 가격을 변동시킴
+     */
     @Transactional
     public void refreshStockPrices() {
-        List<Streamer> streamers = streamerRepository.findAll();
-        // 매번 전원을 다 바꾸면 느리니, 랜덤하게 10명 정도만 변동을 줍니다.
-        Collections.shuffle(streamers);
-        List<Streamer> targets = streamers.subList(0, 10);
+        List<Streamer> allStreamers = streamerRepository.findAll();
+
+        // 데이터가 없을 경우 IndexOutOfBoundsException 방지를 위한 방어 코드
+        if (allStreamers.isEmpty()) {
+            return;
+        }
+
+        // 리스트를 무작위로 섞음
+        Collections.shuffle(allStreamers);
+
+        // 전체 크기와 10 중 작은 값을 선택 (데이터가 10개 미만일 때 에러 방지)
+        int limit = Math.min(allStreamers.size(), 10);
+        List<Streamer> targets = allStreamers.subList(0, limit);
 
         for (Streamer s : targets) {
             updateSingleStreamer(s);
         }
     }
 
-    // 스트리머 한 명의 정보를 업데이트하고 기록하는 공통 메서드
+    /**
+     * 개별 스트리머의 시청자 수 및 가격 업데이트와 히스토리 저장
+     */
     @Transactional
     public void updateSingleStreamer(Streamer s) {
-        // 1. 시청자 수 랜덤 변동 (-15% ~ +15%)
+        // 1. 시청자 수 변동: 기존 시청자의 -15% ~ +15% 사이 랜덤
         int change = (int) (s.getCurrentViewers() * (random.nextDouble() * 0.3 - 0.15));
         int newViewers = Math.max(0, s.getCurrentViewers() + change);
         s.setCurrentViewers(newViewers);
 
-        // 2. 가격 계산 (시청자 1명당 10G + 기본가 100G)
+        // 2. 가격 계산 로직: 시청자 10명당 1G + 기본가 100G
         int newPrice = 100 + (newViewers / 10);
         s.setCurrentPrice(newPrice);
 
-        // 3. 히스토리 기록
+        // 3. 차트용 히스토리 기록 생성 및 저장
         StreamerHistory history = new StreamerHistory();
         history.setStreamerId(s.getId());
         history.setStreamerName(s.getStreamerName());
@@ -123,19 +109,62 @@ public class StockService {
         historyRepository.save(history);
     }
 
-    // 특정 스트리머 상세 정보 조회
+    /**
+     * 주식 1주 즉시 매수 기능
+     */
+    @Transactional
+    public boolean buyStock(Long streamerId) {
+        Streamer streamer = streamerRepository.findById(streamerId)
+                .orElseThrow(() -> new RuntimeException("스트리머를 찾을 수 없습니다."));
+
+        Wallet wallet = getWallet();
+        if (wallet == null) return false;
+
+        int price = streamer.getCurrentPrice();
+        if (wallet.getBalance() < price) {
+            return false; // 잔액 부족
+        }
+
+        // 잔액 차감
+        wallet.setBalance(wallet.getBalance() - price);
+        walletRepository.save(wallet);
+
+        // 포트폴리오(내 주식함)에 저장
+        Portfolio portfolio = new Portfolio();
+        portfolio.setStreamerName(streamer.getStreamerName());
+        portfolio.setQuantity(1);
+        portfolio.setAveragePrice((long) price);
+        portfolioRepository.save(portfolio);
+
+        return true;
+    }
+
+    /**
+     * 내 보유 주식(포트폴리오) 전체 목록 조회
+     */
+    public List<Portfolio> getMyPortfolio() {
+        return portfolioRepository.findAll();
+    }
+
+    /**
+     * 상세 페이지용 스트리머 정보 조회
+     */
     public Streamer getStreamerById(Long id) {
         return streamerRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("스트리머를 찾을 수 없습니다."));
     }
 
-    // 특정 스트리머의 최근 가격 히스토리 조회 (그래프용)
+    /**
+     * 특정 스트리머의 최근 가격 기록 20개 조회 (그래프 데이터용)
+     */
     public List<StreamerHistory> getStockHistory(Long streamerId) {
-        // 최신순으로 가져와서 그래프에 뿌리기 위해 리스트를 뒤집거나 정렬해서 보낼 수 있습니다.
         return historyRepository.findTop20ByStreamerIdOrderByRecordedAtDesc(streamerId);
     }
 
-    // 다량 매수 기능
+    /**
+     * 다량 매수 기능 (수량 입력 매수)
+     * 평단가(Average Price) 계산 로직 포함
+     */
     @Transactional
     public boolean buyStock(Long streamerId, int quantity) {
         if (quantity <= 0) return false;
@@ -148,16 +177,15 @@ public class StockService {
 
         long totalCost = (long) streamer.getCurrentPrice() * quantity;
 
-        // 잔액 확인
         if (wallet.getBalance() < totalCost) {
-            return false;
+            return false; // 잔액 부족
         }
 
-        // 돈 차감
-        wallet.setBalance(wallet.getBalance() - (int)totalCost);
+        // 자산 차감
+        wallet.setBalance(wallet.getBalance() - totalCost);
         walletRepository.save(wallet);
 
-        // 포트폴리오 업데이트 (이미 있으면 수량 추가, 없으면 신규 생성)
+        // 기존 보유 주식 확인
         Portfolio portfolio = portfolioRepository.findAll().stream()
                 .filter(p -> p.getStreamerName().equals(streamer.getStreamerName()))
                 .findFirst()
@@ -167,7 +195,7 @@ public class StockService {
             portfolio.setStreamerName(streamer.getStreamerName());
             portfolio.setQuantity(quantity);
             portfolio.setAveragePrice((long) streamer.getCurrentPrice());
-        } else { // 추가 매수 (평단가 계산: (기존총액 + 신규총액) / 전체수량)
+        } else { // 추가 매수 (평단가 재계산)
             long currentTotal = portfolio.getAveragePrice() * portfolio.getQuantity();
             int newQuantity = portfolio.getQuantity() + quantity;
             portfolio.setAveragePrice((currentTotal + totalCost) / newQuantity);
@@ -178,7 +206,10 @@ public class StockService {
         return true;
     }
 
-    // 매도 기능
+    /**
+     * 주식 매도 기능
+     * 현재가 기준으로 현금화 및 포트폴리오 업데이트
+     */
     @Transactional
     public boolean sellStock(Long streamerId, int quantity) {
         if (quantity <= 0) return false;
@@ -186,13 +217,12 @@ public class StockService {
         Streamer streamer = streamerRepository.findById(streamerId)
                 .orElseThrow(() -> new RuntimeException("스트리머를 찾을 수 없습니다."));
 
-        // 내 포트폴리오에서 해당 스트리머 찾기
         Portfolio portfolio = portfolioRepository.findAll().stream()
                 .filter(p -> p.getStreamerName().equals(streamer.getStreamerName()))
                 .findFirst()
                 .orElse(null);
 
-        // 보유 주식이 없거나 팔려는 수량이 더 많으면 실패
+        // 보유 수량 확인
         if (portfolio == null || portfolio.getQuantity() < quantity) {
             return false;
         }
@@ -200,7 +230,7 @@ public class StockService {
         Wallet wallet = getWallet();
         long totalGain = (long) streamer.getCurrentPrice() * quantity;
 
-        // 1. 수량 차감 (다 팔면 삭제, 남으면 업데이트)
+        // 전량 매도 시 삭제, 일부 매도 시 수량만 업데이트
         if (portfolio.getQuantity() == quantity) {
             portfolioRepository.delete(portfolio);
         } else {
@@ -208,11 +238,10 @@ public class StockService {
             portfolioRepository.save(portfolio);
         }
 
-        // 2. 지갑에 돈 추가
-        wallet.setBalance(wallet.getBalance() + (int)totalGain);
+        // 지갑 잔액 증가
+        wallet.setBalance(wallet.getBalance() + totalGain);
         walletRepository.save(wallet);
 
         return true;
     }
-
 }
